# netdata-plugin-upsd

./: .gitignore  CMakeLists.txt  README.md  main.c  upsd_plugin.c
.github/workflows/: c-cpp.yml
netdata-2.6.0/: CMakeLists.txt
netdata-2.6.0/packaging/cmake/Modules/: NetdataBacktrace.cmake  NetdataDashboard.cmake  NetdataEBPFCORE.cmake  NetdataEBPFLegacy.cmake  NetdataGoTools.cmake  NetdataLibBPF.cmake  NetdataProtobuf.cmake  NetdataUtil.cmake  NetdataVersion.cmake  Packaging.cmake
netdata-2.6.0/packaging/repoconfig/: CMakeLists.txt
netdata-2.6.0/src/go/otel-collector/: CMakeLists.txt  release-config.yaml.in
